Fixed item img object position

--- a/index.html
+++ b/index.html
@@ -77,56 +77,56 @@
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">DEEP <br> EARTH</div>
                     </div>
-                    <img src="./images/desktop/image-deep-earth.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-deep-earth.jpg" alt="" class="image-item">
                 </div>
                 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">NIGHT <br> ARCADE</div>
                     </div>
-                    <img src="./images/desktop/image-night-arcade.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-night-arcade.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">SOCKER <br> TEAM VR</div>
                     </div>
-                    <img src="./images/desktop/image-soccer-team.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-soccer-team.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">THE GRID</div>
                     </div>
-                    <img src="./images/desktop/image-grid.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-grid.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">FROM UP <br> ABOVE VR</div>
                     </div>
-                    <img src="./images/desktop/image-from-above.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-from-above.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">POCKET <br> BOREALIS</div>
                     </div>
-                    <img src="./images/desktop/image-pocket-borealis.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-pocket-borealis.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">THE <br> CURIOSITY</div>
                     </div>
-                    <img src="./images/desktop/image-curiosity.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-curiosity.jpg" alt="" class="image-item">
                 </div>
 
                 <div class="group bg-red-300  h-[12rem]  md:h-[28rem] overflow-hidden relative">
                     <div class="absolute flex items-end w-full h-full z-10 bg-gradient-to-t from-slate-900 p-6">
                         <div class="text-3xl text-white">MAKE IT <br> FISHEYE</div>
                     </div>
-                    <img src="./images/desktop/image-fisheye.jpg" alt="" class="size-full object-cover duration-200 group-hover:scale-110">
+                    <img src="./images/desktop/image-fisheye.jpg" alt="" class="image-item">
                 </div>
             </div>
         </div>
